# teuthology-ai-analyzer

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOY.md  Makefile  README.md  docker-compose.yml  pyproject.toml  setup_local.sh  start.sh
backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: analyze.py  assistant.py  config_routes.py  connection.py  deps.py  health.py  history.py  ollama_models.py  providers.py
backend/app/core/: config.py  llm_config.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/models/: schemas.py
backend/app/providers/: __init__.py  base.py  bob_cli_provider.py  cursor_provider.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
backend/app/services/: __init__.py  analysis_service.py  archive_client.py  assistant.py  connection_service.py  llm_client.py  llm_common.py  local_archive_client.py  log_digest.py  pulpito_client.py  session_service.py  teuth_docs.py
backend/tests/: test_api_key_resolution.py  test_bob_cli.py  test_connection_service.py  test_llm_common.py  test_llm_env.py  test_local_archive.py  test_log_digest.py  test_parse_run_name.py  test_pulpito_table.py  test_teuth_docs.py
backend/tests/fixtures/: run_table_snippet.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  AssistantChat.tsx  api.ts  main.tsx  models.ts  theme.ts
(+13 files in other folders)
